--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "show-top-msps": "tsx src/utils/showTopMSPScores.ts",
     "msp-statistics": "tsx src/utils/mspScoreStatistics.ts",
     "scorecard-statistics": "tsx src/utils/scorecardStatistics.ts",
-    "compute-scores": "tsx src/utils/computeAndStoreScores.ts"
+    "compute-scores": "tsx src/utils/computeAndStoreScores.ts",
+    "migrate-blob": "tsx src/utils/migrateToBlob.ts"
   },
   "keywords": [
     "acquisition",
@@ -37,6 +38,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/blob": "^2.0.0",
     "axios": "^1.6.0",
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0-rc.12",
