--- a/.github/workflows/run-scripts.yml
+++ b/.github/workflows/run-scripts.yml
@@ -19,6 +19,21 @@ on:
           - dashboard
           - scorecard-all
           - top-companies
+      enrich_websites:
+        description: 'Enable website enrichment (for load-csv script)'
+        required: false
+        type: boolean
+        default: false
+      skip_existing:
+        description: 'Skip existing companies (for load-csv script)'
+        required: false
+        type: boolean
+        default: true
+      limit:
+        description: 'Limit number of companies (for load-csv script, 0 = unlimited)'
+        required: false
+        type: string
+        default: '0'
   schedule:
     # Run scrape daily at 2 AM UTC
     - cron: '0 2 * * *'
@@ -49,8 +64,24 @@ jobs:
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
           MISTRAL_OCR_API_KEY: ${{ secrets.MISTRAL_OCR_API_KEY }}
         run: |
-          SCRIPT=${INPUT_SCRIPT:-scrape}
-          npm run $SCRIPT
+          SCRIPT="${{ github.event.inputs.script || 'scrape' }}"
+          
+          # Build command with flags for load-csv script
+          if [ "$SCRIPT" = "load-csv" ]; then
+            FLAGS=""
+            if [ "${{ github.event.inputs.skip_existing }}" = "true" ]; then
+              FLAGS="$FLAGS --skip-existing"
+            fi
+            if [ "${{ github.event.inputs.enrich_websites }}" = "true" ]; then
+              FLAGS="$FLAGS --enrich-websites"
+            fi
+            if [ "${{ github.event.inputs.limit }}" != "0" ] && [ "${{ github.event.inputs.limit }}" != "" ]; then
+              FLAGS="$FLAGS --limit=${{ github.event.inputs.limit }}"
+            fi
+            npm run $SCRIPT "IT companies from Endole.csv" $FLAGS
+          else
+            npm run $SCRIPT
+          fi
       
       - name: Commit and push changes
         if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
