--- a/.github/workflows/run-scripts.yml
+++ b/.github/workflows/run-scripts.yml
@@ -60,16 +60,31 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Verify CSV file (for load-csv)
+        if: github.event.inputs.script == 'load-csv'
+        run: |
+          if [ ! -f "IT companies from Endole.csv" ]; then
+            echo "❌ Error: CSV file 'IT companies from Endole.csv' not found!"
+            ls -la *.csv 2>/dev/null || echo "No CSV files found in root directory"
+            exit 1
+          fi
+          echo "✓ CSV file found: $(ls -lh 'IT companies from Endole.csv' | awk '{print $5, $9}')"
+      
       - name: Run script
+        timeout-minutes: 60
         env:
           COMPANIES_HOUSE_API_KEY: ${{ secrets.COMPANIES_HOUSE_API_KEY }}
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
           MISTRAL_OCR_API_KEY: ${{ secrets.MISTRAL_OCR_API_KEY }}
         run: |
+          set -e  # Exit on error
+          
           SCRIPT="${{ github.event.inputs.script || 'scrape' }}"
+          echo "Running script: $SCRIPT"
           
           # Build command with flags for load-csv script
           if [ "$SCRIPT" = "load-csv" ]; then
+            echo "Building load-csv command..."
             FLAGS=""
             if [ "${{ github.event.inputs.skip_existing }}" = "true" ]; then
               FLAGS="$FLAGS --skip-existing"
@@ -82,9 +97,18 @@ jobs:
             if [ "${{ github.event.inputs.limit }}" != "0" ] && [ "${{ github.event.inputs.limit }}" != "" ]; then
               FLAGS="$FLAGS --limit=${{ github.event.inputs.limit }}"
             fi
-            npm run $SCRIPT -- "IT companies from Endole.csv" $FLAGS
+            
+            echo "Command: npm run $SCRIPT -- 'IT companies from Endole.csv' $FLAGS"
+            npm run $SCRIPT -- "IT companies from Endole.csv" $FLAGS || {
+              echo "❌ Script failed with exit code $?"
+              exit 1
+            }
           else
-            npm run $SCRIPT
+            echo "Command: npm run $SCRIPT"
+            npm run $SCRIPT || {
+              echo "❌ Script failed with exit code $?"
+              exit 1
+            }
           fi
       
       - name: Commit and push changes
